done (i think) with "how - part 1". removing aos, replacing with ScrollOut (custom callbacks on scroll-in/out) which lets us turn animations off when they are out of view. finishing laptop network animation, looks ok. gets the job done. none of this is going to be perfect, but it needs to get the point across. adding a large=true option to leader with more padding, good for large section separation. fixing some link/button/nav issues, making sure things play nice with uikit.

--- a/css/common.scss
+++ b/css/common.scss
@@ -5,6 +5,8 @@ $background: #fff;  //#f0f0f0;
 $text-color: #111;
 $primary-color: #c22;
 $secondary-color: #cc00ff;
+$link-color: $primary-color;
+$link-color-dark: darken($primary-color, 15%);
 $site-width: 1024px;
 $font-text: 'Titillium Web', sans-serif;
 $font-header: 'Titillium Web', sans-serif;
